# edge-portal

./: .dockerignore  Dockerfile  docker-compose.pi.yml
.github/workflows/: docker-publish.yml
client/: app.js  index.html  styles.css
daemons/aht30/: CMakeLists.txt  Dockerfile
daemons/aht30/include/: aht30.hpp
daemons/aht30/src/: aht30.cpp  aht30_daemon.cpp  test_read.cpp
daemons/video/: CMakeLists.txt  Dockerfile
daemons/video/src/: video_daemon.cpp
server/app/: main.py
